[package]
name = "protobuf-unicode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { path = "../../protobuf" }

[build-dependencies]
protobuf-codegen = { path = "../../protobuf-codegen" }
protoc-rust = "^2.0"
